sna: Reorder busyness checks after finding the proxy's parents

Due to the way request tracking on proxies work, we need to inspect the
parent and not the proxy itself.

Reported-by: Matti Hämäläinen <ccr@tnsp.org>
References: https://bugs.freedesktop.org/show_bug.cgi?id=94125
Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>